# napari-himaviz

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_himaviz/: __init__.py  _widget.py  napari.yaml
src/napari_himaviz/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
